welcome.lessons.welcome.bdr.BDR.scala.code
var ltr : string=""
while(estSurMessage){
	
	litMessage() : string

	if(ltr = "Z") recule();
	if(ltr = "R"){
		droite();
		avance();
		}
	if(ltr = "L"){
		gauche();
		avance();
		}
	if(ltr = "I")
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	}